# FFoxglove

./: CMakeLists.txt
include/gameFrame/: gameFrame.hpp
src/gameFrame/: gameFrame.cpp
src/platform/: Foxglove.cpp
